# Fast365

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SIGNING.md  build.bat
.github/workflows/: ci.yml  release.yml
src/: docx.cpp  docx.h  fast365.rc  html_util.cpp  html_util.h  inflate.cpp  inflate.h  main.cpp  xml.cpp  xml.h  zip.cpp  zip.h
tests/: make_sample.ps1  run_corpus.ps1
